# cf-control

.devcontainer/: Dockerfile.nogpu  compose.yaml  devcontainer.json  setup.sh
cf_control/: CMakeLists.txt
cf_control/include/cf_control/: mixer.hpp
cf_control/src/: mixer.cpp
cf_control_msgs/: CMakeLists.txt  package.xml
cf_control_msgs/msg/: ContorlerParameters.msg  DroneOutput.msg  DroneParameters.msg  Flat.msg
drone_math_model/: package.xml  setup.cfg  setup.py
drone_math_model/drone_math_model/: control.py  drone_flat_to_state.py  drone_model.py  drone_tester.py  mpc.py  trajectory.py
drone_math_model/launch/: drone_system_launch.py
drone_math_model/test/: flat_test.py  test_flake8.py
